Bug 298532 - Crash at startup: CmakeManager::parse / KDirWatch::addDir (probably threading related)
Summary: Crash at startup: CmakeManager::parse / KDirWatch::addDir (probably threading...
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: 4.3.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 305091 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-21 08:57 UTC by Joris Guisson
Modified: 2012-12-23 01:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joris Guisson 2012-04-21 08:57:10 UTC
Application: kdevelop (4.3.1)
KDE Platform Version: 4.7.4 (4.7.4)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-17-generic x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
Crash happened when I started up ktorrent, two cmake projects were being loaded. First time I saw this with 4.3.1.

The crash can be reproduced some of the time.

-- Backtrace:
Application: KDevelop (kdevelop), signal: Segmentation fault
pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
	in ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S
[Current thread is 1 (Thread 0x7fe1ad130780 (LWP 2471))]

Thread 13 (Thread 0x7fe194181700 (LWP 2472)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:216
#1  0x00007fe1ab62711e in wait (time=1000, this=0x288fb40) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x2872980, time=1000) at thread/qwaitcondition_unix.cpp:160
#3  0x00007fe1a79d9cab in KDevelop::DUChainPrivate::CleanupThread::run (this=0x2872960) at /home/joris/tmp/kdevelop/kdevplatform-1.3.1/language/duchain/duchain.cpp:282
#4  0x00007fe1ab626d05 in QThreadPrivate::start (arg=0x2872960) at thread/qthread_unix.cpp:331
#5  0x00007fe1a9679efc in start_thread (arg=0x7fe194181700) at pthread_create.c:304
#6  0x00007fe1aa2fc59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 12 (Thread 0x7fe185323700 (LWP 2473)):
#0  0x00007fe1aa2f5613 in select () at ../sysdeps/unix/syscall-template.S:82
#1  0x00007fe1ab6ef671 in QProcessManager::run (this=0x7fe1aba41580) at io/qprocess_unix.cpp:245
#2  0x00007fe1ab626d05 in QThreadPrivate::start (arg=0x7fe1aba41580) at thread/qthread_unix.cpp:331
#3  0x00007fe1a9679efc in start_thread (arg=0x7fe185323700) at pthread_create.c:304
#4  0x00007fe1aa2fc59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 11 (Thread 0x7fe17f480700 (LWP 2475)):
#0  0x00007fe1a967d1fd in __pthread_mutex_unlock_usercnt (mutex=<optimized out>, decr=<optimized out>) at pthread_mutex_unlock.c:52
#1  __pthread_mutex_unlock (mutex=0x32d7e18) at pthread_mutex_unlock.c:290
#2  0x00007fe1a526dd79 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe1a526e429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fe1ab738f3e in QEventDispatcherGlib::processEvents (this=0x32d77f0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007fe1ab70ccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fe1ab70cef7 in QEventLoop::exec (this=0x7fe17f47fdd0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007fe1ab62427f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#8  0x00007fe1ab6efcbf in QInotifyFileSystemWatcherEngine::run (this=0x32d6bc0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007fe1ab626d05 in QThreadPrivate::start (arg=0x32d6bc0) at thread/qthread_unix.cpp:331
#10 0x00007fe1a9679efc in start_thread (arg=0x7fe17f480700) at pthread_create.c:304
#11 0x00007fe1aa2fc59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 10 (Thread 0x7fe17e21a700 (LWP 2476)):
#0  0x00007fe1a967f0a7 in __pthread_getspecific (key=<optimized out>) at pthread_getspecific.c:62
#1  0x00007fe1ab62608c in get_thread_data () at thread/qthread_unix.cpp:172
#2  QThreadData::current () at thread/qthread_unix.cpp:210
#3  0x00007fe1ab7386a9 in postEventSourcePrepare (s=0x3489870, timeout=0x7fe17e219c6c) at kernel/qeventdispatcher_glib.cpp:254
#4  0x00007fe1a526cff2 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fe1a526ddfd in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007fe1a526e429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007fe1ab738f3e in QEventDispatcherGlib::processEvents (this=0x3491ee0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#8  0x00007fe1ab70ccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#9  0x00007fe1ab70cef7 in QEventLoop::exec (this=0x7fe17e219e00, flags=...) at kernel/qeventloop.cpp:201
#10 0x00007fe1ab62427f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#11 0x00007fe1ab626d05 in QThreadPrivate::start (arg=0x34916f0) at thread/qthread_unix.cpp:331
#12 0x00007fe1a9679efc in start_thread (arg=0x7fe17e21a700) at pthread_create.c:304
#13 0x00007fe1aa2fc59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#14 0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7fe17da19700 (LWP 2477)):
#0  0x00007fe1a967c034 in __pthread_mutex_lock (mutex=0x7fe18c0020b8) at pthread_mutex_lock.c:61
#1  0x00007fe1a526ce5d in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe1a526ddfd in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe1a526e429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fe1ab738f3e in QEventDispatcherGlib::processEvents (this=0x7fe18c002000, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007fe1ab70ccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fe1ab70cef7 in QEventLoop::exec (this=0x7fe17da18e00, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007fe1ab62427f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#8  0x00007fe1ab626d05 in QThreadPrivate::start (arg=0x348fe60) at thread/qthread_unix.cpp:331
#9  0x00007fe1a9679efc in start_thread (arg=0x7fe17da19700) at pthread_create.c:304
#10 0x00007fe1aa2fc59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7fe17c0a2700 (LWP 2482)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fe195475fe2 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007fe195476019 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007fe1a9679efc in start_thread (arg=0x7fe17c0a2700) at pthread_create.c:304
#4  0x00007fe1aa2fc59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7fe17ae55700 (LWP 2494)):
#0  0x00007fe1aa2f0473 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fe1a526df68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe1a526e429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe1ab738f3e in QEventDispatcherGlib::processEvents (this=0x758ef80, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007fe1ab70ccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fe1ab70cef7 in QEventLoop::exec (this=0x7fe17ae54dd0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007fe1ab62427f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007fe1ab6efcbf in QInotifyFileSystemWatcherEngine::run (this=0x758ee70) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fe1ab626d05 in QThreadPrivate::start (arg=0x758ee70) at thread/qthread_unix.cpp:331
#9  0x00007fe1a9679efc in start_thread (arg=0x7fe17ae55700) at pthread_create.c:304
#10 0x00007fe1aa2fc59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7fe179617700 (LWP 2568)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fe1a23c1c2c in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007fe1a23c1d59 in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007fe1a9679efc in start_thread (arg=0x7fe179617700) at pthread_create.c:304
#4  0x00007fe1aa2fc59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7fe179e18700 (LWP 2569)):
#0  0x00007fe1aa2f0473 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fe1a526df68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe1a526e429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe1ab738f3e in QEventDispatcherGlib::processEvents (this=0x7fe17456fe10, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007fe1ab70ccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fe1ab70cef7 in QEventLoop::exec (this=0x7fe179e17e00, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007fe1ab62427f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007fe1ab626d05 in QThreadPrivate::start (arg=0x4c257a0) at thread/qthread_unix.cpp:331
#8  0x00007fe1a9679efc in start_thread (arg=0x7fe179e18700) at pthread_create.c:304
#9  0x00007fe1aa2fc59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7fe13398a700 (LWP 2614)):
[KCrash Handler]
#6  0x00007fe1ab6682b9 in QString::operator< (this=0x7fe18c26b7b0, other=...) at tools/qstring.cpp:2205
#7  0x00007fe1acba8ae0 in ?? () from /usr/lib/libkdecore.so.5
#8  0x00007fe1acba919b in KDirWatch::addDir(QString const&, QFlags<KDirWatch::WatchMode>) () from /usr/lib/libkdecore.so.5
#9  0x00007fe17b0ed144 in CMakeManager::parse (this=0x6685be0, item=0x8e20600) at /home/joris/tmp/kdevelop/kdevelop-4.3.1/projectmanagers/cmake/cmakemanager.cpp:684
#10 0x00007fe1a7fcb594 in import (folder=<optimized out>, this=0x31ccfb0) at /home/joris/tmp/kdevelop/kdevplatform-1.3.1/project/importprojectjob.cpp:53
#11 import (folder=<optimized out>, this=0x31ccfb0) at /home/joris/tmp/kdevelop/kdevplatform-1.3.1/project/importprojectjob.cpp:57
#12 KDevelop::ImportProjectJobPrivate::import (this=0x31ccfb0, folder=<optimized out>) at /home/joris/tmp/kdevelop/kdevplatform-1.3.1/project/importprojectjob.cpp:57
#13 0x00007fe1a7fcb126 in run (this=0x7fa7d30) at /usr/include/qt4/QtCore/qtconcurrentrunbase.h:120
#14 QtConcurrent::RunFunctionTask<void>::run (this=0x7fa7d30) at /usr/include/qt4/QtCore/qtconcurrentrunbase.h:114
#15 0x00007fe1ab61b795 in QThreadPoolThread::run (this=0x31cdf00) at concurrent/qthreadpool.cpp:106
#16 0x00007fe1ab626d05 in QThreadPrivate::start (arg=0x31cdf00) at thread/qthread_unix.cpp:331
#17 0x00007fe1a9679efc in start_thread (arg=0x7fe13398a700) at pthread_create.c:304
#18 0x00007fe1aa2fc59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#19 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fe133189700 (LWP 2655)):
#0  0x00007fe1aa2f5613 in select () at ../sysdeps/unix/syscall-template.S:82
#1  0x00007fe1ab735b6f in qt_safe_select (nfds=13, fdread=0x7fe133186110, fdwrite=0x7fe133186190, fdexcept=0x0, orig_timeout=0x7fe1331860e0) at kernel/qcore_unix.cpp:92
#2  0x00007fe1ab6eb6a8 in select_msecs (nfds=<optimized out>, fdread=<optimized out>, fdwrite=<optimized out>, timeout=<optimized out>) at io/qprocess_unix.cpp:888
#3  0x00007fe1ab6ecec5 in QProcessPrivate::waitForFinished (this=0x7fe18c2b17c0, msecs=29968) at io/qprocess_unix.cpp:1104
#4  0x00007fe1ab6ad9ae in QProcess::waitForFinished (this=0x7fe133186300, msecs=29968) at io/qprocess.cpp:1742
#5  0x00007fe18406aa60 in CMakeProjectVisitor::visit (this=0x7fe133187fc0, exec=0x7fe18c2b14d0) at /home/joris/tmp/kdevelop/kdevelop-4.3.1/projectmanagers/cmake/parser/cmakeprojectvisitor.cpp:1341
#6  0x00007fe18407bf1e in CMakeProjectVisitor::walk (this=0x7fe133187fc0, fc=..., line=9, isClean=<optimized out>) at /home/joris/tmp/kdevelop/kdevelop-4.3.1/projectmanagers/cmake/parser/cmakeprojectvisitor.cpp:2213
#7  0x00007fe18407dfd2 in CMakeProjectVisitor::visit (this=0x7fe133187fc0, ifast=0x7fe18c2b1400) at /home/joris/tmp/kdevelop/kdevelop-4.3.1/projectmanagers/cmake/parser/cmakeprojectvisitor.cpp:1302
#8  0x00007fe18407bf1e in CMakeProjectVisitor::walk (this=0x7fe133187fc0, fc=..., line=8, isClean=<optimized out>) at /home/joris/tmp/kdevelop/kdevelop-4.3.1/projectmanagers/cmake/parser/cmakeprojectvisitor.cpp:2213
#9  0x00007fe184080cf5 in CMakeProjectVisitor::visit (this=0x7fe133187fc0, pack=0x7fe18c2a1ce0) at /home/joris/tmp/kdevelop/kdevelop-4.3.1/projectmanagers/cmake/parser/cmakeprojectvisitor.cpp:678
#10 0x00007fe18408278a in CMakeProjectVisitor::visit (this=0x7fe133187fc0, pack=<optimized out>) at /home/joris/tmp/kdevelop/kdevelop-4.3.1/projectmanagers/cmake/parser/cmakeprojectvisitor.cpp:594
#11 0x00007fe18407bf1e in CMakeProjectVisitor::walk (this=0x7fe133187fc0, fc=..., line=9, isClean=<optimized out>) at /home/joris/tmp/kdevelop/kdevelop-4.3.1/projectmanagers/cmake/parser/cmakeprojectvisitor.cpp:2213
#12 0x00007fe18408f37e in CMakeParserUtils::includeScript (file=<optimized out>, parent=..., data=0x8cea798, sourcedir=..., env=...) at /home/joris/tmp/kdevelop/kdevelop-4.3.1/projectmanagers/cmake/parser/cmakeparserutils.cpp:175
#13 0x00007fe17b0eb37b in CMakeManager::includeScript (this=0x6685be0, file=..., project=0x4c9f260, dir=..., parent=...) at /home/joris/tmp/kdevelop/kdevelop-4.3.1/projectmanagers/cmake/cmakemanager.cpp:659
#14 0x00007fe17b0ed708 in CMakeManager::parse (this=0x6685be0, item=0x7fe18c264e50) at /home/joris/tmp/kdevelop/kdevelop-4.3.1/projectmanagers/cmake/cmakemanager.cpp:714
#15 0x00007fe1a7fcb4f2 in import (folder=<optimized out>, this=0x16211a0) at /home/joris/tmp/kdevelop/kdevplatform-1.3.1/project/importprojectjob.cpp:53
#16 KDevelop::ImportProjectJobPrivate::import (this=0x16211a0, folder=<optimized out>) at /home/joris/tmp/kdevelop/kdevplatform-1.3.1/project/importprojectjob.cpp:57
#17 0x00007fe1a7fcb126 in run (this=0x7fa7660) at /usr/include/qt4/QtCore/qtconcurrentrunbase.h:120
#18 QtConcurrent::RunFunctionTask<void>::run (this=0x7fa7660) at /usr/include/qt4/QtCore/qtconcurrentrunbase.h:114
#19 0x00007fe1ab61b795 in QThreadPoolThread::run (this=0x1627420) at concurrent/qthreadpool.cpp:106
#20 0x00007fe1ab626d05 in QThreadPrivate::start (arg=0x1627420) at thread/qthread_unix.cpp:331
#21 0x00007fe1a9679efc in start_thread (arg=0x7fe133189700) at pthread_create.c:304
#22 0x00007fe1aa2fc59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#23 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fe13240b700 (LWP 2842)):
#0  0x00007fe1aa2f0473 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fe1a526df68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe1a526e429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe1ab738ed6 in QEventDispatcherGlib::processEvents (this=0x8d5d710, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#4  0x00007fe1ab70ccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fe1ab70cef7 in QEventLoop::exec (this=0x7fe13240add0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007fe1ab62427f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007fe1ab6efcbf in QInotifyFileSystemWatcherEngine::run (this=0x7fe18c277020) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fe1ab626d05 in QThreadPrivate::start (arg=0x7fe18c277020) at thread/qthread_unix.cpp:331
#9  0x00007fe1a9679efc in start_thread (arg=0x7fe13240b700) at pthread_create.c:304
#10 0x00007fe1aa2fc59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fe1ad130780 (LWP 2471)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fe1ab6271ab in wait (time=18446744073709551615, this=0x80f47d0) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x7b2b3e0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007fe1ab61b0a1 in QThreadPoolPrivate::waitForDone (this=0x7b2b350) at concurrent/qthreadpool.cpp:295
#4  0x00007fe1ab61c58f in QThreadPool::~QThreadPool (this=<optimized out>, __in_chrg=<optimized out>) at concurrent/qthreadpool.cpp:428
#5  0x00007fe1ab61c5c9 in QThreadPool::~QThreadPool (this=0x7bb7b30, __in_chrg=<optimized out>) at concurrent/qthreadpool.cpp:430
#6  0x00007fe1ab61c5f5 in QGlobalStaticDeleter<QThreadPool>::~QGlobalStaticDeleter (this=0x7fe1aba41188, __in_chrg=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qglobal.h:1825
#7  0x00007fe1aa254821 in __run_exit_handlers (status=1, listp=0x7fe1aa5b35a8, run_list_atexit=true) at exit.c:78
#8  0x00007fe1aa2548a5 in __GI_exit (status=<optimized out>) at exit.c:100
#9  0x00007fe1aab29618 in qt_xio_errhandler () at kernel/qapplication_x11.cpp:781
#10 0x00007fe1abeea748 in KApplication::xioErrhandler(_XDisplay*) () from /usr/lib/libkdeui.so.5
#11 0x00007fe1a670211e in _XIOError () from /usr/lib/x86_64-linux-gnu/libX11.so.6
#12 0x00007fe1a66ff8fd in _XEventsQueued () from /usr/lib/x86_64-linux-gnu/libX11.so.6
#13 0x00007fe1a66f019f in XEventsQueued () from /usr/lib/x86_64-linux-gnu/libX11.so.6
#14 0x00007fe1aab64f3c in x11EventSourceCheck (s=0x13841b0) at kernel/qguieventdispatcher_glib.cpp:85
#15 0x00007fe1a526d734 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#16 0x00007fe1a526df82 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#17 0x00007fe1a526e429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#18 0x00007fe1ab738ed6 in QEventDispatcherGlib::processEvents (this=0x1351fa0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#19 0x00007fe1aab6510e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#20 0x00007fe1ab70ccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#21 0x00007fe1ab70cef7 in QEventLoop::exec (this=0x7fff978dc360, flags=...) at kernel/qeventloop.cpp:201
#22 0x00007fe1ab711789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#23 0x000000000040a259 in main (argc=<optimized out>, argv=<optimized out>) at /home/joris/tmp/kdevelop/kdevelop-4.3.1/app/main.cpp:479

Reported using DrKonqi
Comment 1 Milian Wolff 2012-05-07 12:05:13 UTC
I'd bet this is another crash due to improper usage of multi threading in the cmake manager plugin.
Comment 2 Aleix Pol 2012-05-08 00:40:30 UTC
Git commit 9b785de4778455fa41442917579604e2bf0a5b23 by Aleix Pol.
Committed on 08/05/2012 at 02:39.
Pushed by apol into branch '4.3'.

Prevent different threads to modify the KDirWatcher instance at the same time

M  +10   -2    projectmanagers/cmake/cmakemanager.cpp
M  +1    -0    projectmanagers/cmake/cmakemanager.h

http://commits.kde.org/kdevelop/9b785de4778455fa41442917579604e2bf0a5b23
Comment 3 Aleix Pol 2012-05-08 00:40:30 UTC
Git commit bb7118f68c0700ccf465e226287a53eddc3519ee by Aleix Pol.
Committed on 08/05/2012 at 02:39.
Pushed by apol into branch 'master'.

Prevent different threads to modify the KDirWatcher instance at the same time

M  +10   -2    projectmanagers/cmake/cmakemanager.cpp
M  +1    -0    projectmanagers/cmake/cmakemanager.h

http://commits.kde.org/kdevelop/bb7118f68c0700ccf465e226287a53eddc3519ee
Comment 4 Kevin Funk 2012-12-23 01:19:13 UTC
*** Bug 305091 has been marked as a duplicate of this bug. ***