Prevent different threads to modify the KDirWatcher instance at the same time

BUG: 298532